Пример отправки на сервер без перезагрузки формі

--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <script src="script.js">
-
-    </script>
+    <!-- <div class="wrapper">
+        <select name="cars" id="cars" class="cars">
+            <option value="no">Выберите модель</option>
+            <option value="bmw">BMW</option>
+            <option value="volvo">Volvo</option>
+            <option value="Москвич">Москвич</option>
+        </select>
+    </div>
+    <div class="output"></div> -->
+    <div class="wrapper">
+        <form action="">
+        <input type="text" name="nameUser" placeholder="Enter Your Name">.
+        <input type="mail" name="email" placeholder="Enter Your Email">
+        <input type="submit" value="Suscribe">
+        </form>
+    </div>
+    <div class="message"></div>
+   
+    <script src="script.js"></script>
 </body>
 </html>
