--- a/index.html
+++ b/index.html
@@ -5,27 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <div class="wrapper">
-        <select name="cars" id="cars" class="cars">
-            <option value="no">Выберите модель</option>
-            <option value="bmw">BMW</option>
-            <option value="volvo">Volvo</option>
-            <option value="Москвич">Москвич</option>
-        </select>
-    </div>
-    <div class="output"></div> -->
-    <div class="wrapper">
-        <form action="">
-        <input type="text" name="nameUser" placeholder="Enter Your Name">.
-        <input type="mail" name="email" placeholder="Enter Your Email">
-        <input type="submit" value="Suscribe">
-        </form>
-    </div>
-    <div class="message"></div>
-   
+   <!-- <ul>
+       <li>1</li>
+       <li>2</li>
+       <li>3</li>
+       <li>4</li>
+       <li>5</li>
+       <li>6</li>
+       <li>7</li>
+       <li>8</li>
+       <li>9</li>
+       <li>10</li>
+       <li>11</li>
+       <li>12</li>
+       <li>13</li>
+       <li>14</li>
+       <li>15</li>
+       <li>16</li>
+   </ul> -->
+   <!-- <div class="conteiner">
+       <div class="row justify-content-end justify-content-lg-3">
+           <div class="col-12 col-md-6">
+               <div class="wrap">
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tenetur dolorem quam consectetur, eum modi atque repudiandae dolor minus sit accusamus fuga laudantium pariatur nam laboriosam saepe adipisci mollitia cumque.
+               </div>
+           </div>
+       </div>
+   </div> -->
+   <div class="conteiner">
+       <div class="row">
+           <div class="col-12 col-md-6 col-lg-3">
+               <div class="wrap">
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, rem sapiente facere consequatur necessitatibus atque provident perferendis sequi ut aperiam, reiciendis itaque amet nobis animi harum eius eveniet perspiciatis suscipit!
+               </div>
+           </div>
+           <div class="col-12 col-md-6 col-lg-3">
+            <div class="wrap">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, rem sapiente facere consequatur necessitatibus atque provident perferendis sequi ut aperiam, reiciendis itaque amet nobis animi harum eius eveniet perspiciatis suscipit!
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+            <div class="wrap">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, rem sapiente facere consequatur necessitatibus atque provident perferendis sequi ut aperiam, reiciendis itaque amet nobis animi harum eius eveniet perspiciatis suscipit!
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+            <div class="wrap">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, rem sapiente facere consequatur necessitatibus atque provident perferendis sequi ut aperiam, reiciendis itaque amet nobis animi harum eius eveniet perspiciatis suscipit!
+            </div>
+        </div>
+
+       </div>
+   </div>
     <script src="script.js"></script>
 </body>
 </html>
